--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,7 @@
       transform: rotate(215deg) translateX(-500px);
       opacity: 0;
     }
-  }
-}
+  }}
 
 @layer base{
     :root {
@@ -85,6 +84,19 @@
       --primary-foreground: 213 31% 91%;
 
       --border: 217 33% 20%;
+  }
+
+  * {
+    @apply border-border;
+  }
+
+  html {
+    @apply scroll-smooth;
+  }
+
+  body {
+    @apply bg-background text-foreground transition-colors duration-300;
+    font-feature-settings:"rlig" 1, "calt" 1;
   }
 }
 
@@ -139,4 +151,12 @@
 @utility meteor {
   @apply absolute bg-linear-to-r from-white via-white to-transparent rounded-full;
   box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.3);
+}
+
+#root {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+
 }
